# rust_wgpu_pong3d

./: Cargo.toml  README.md
src/: buffers.rs  camera.rs  errors.rs  geometries.rs  lib.rs  main.rs  math.rs  model.rs  renderers.rs  texture2d.rs
src/buffers/: geometry.rs  uniform.rs
src/math/: mat4x4.rs  vec2.rs  vec4.rs
src/renderers/: material_buffer.rs  material_shader.rs  unlit_material.rs
src/renderers/shaders/: MaterialShader.wgsl  UnlitMaterialShader.wgsl
src/shaders/: UnlitMaterialShader.wgsl
