[package]
name = "rust_wgpu_pong3d"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
thiserror = "1.0.58"
image = "0.25.1"
glam = { version = "0.27.0", features = ["bytemuck"] }
tobj = "4.0.2"
 

 